--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -11,7 +11,6 @@
 </head>
 <body>
     <h1>Smart Home IoT Dashboard</h1>
-    <h2 id="header2"></h2>
     <div class="dashboard-container">
         
         
@@ -44,6 +43,11 @@
         </div>
 
         <div class="userInfo">
+            <h1>General Info</h1>
+            <h2 id="username">Hello </h2>
+            <p id="rfid_tag">RFID Tag: </p>
+            <p id="email">Email: </p><br>
+
             <h1>Preferences</h1>
             
             <form action="/add_or_update_user" method="POST">
@@ -78,15 +82,3 @@
 </body>
 </html>
  
-
-
-<!-- 
-userID
-RFID Tag Number 
-Temperature Threshhold 
-Light intensity Threshold 
-
-<p>RFID Tag: {{ user_prefs.rfid_tag if user_prefs else 'Not Set' }}</p>
-            <p>Temperature Threshold: {{ user_prefs.temperature_threshold if user_prefs else 'Not Set' }}°C</p>
-            <p>Lighting Intensity Threshold: {{ user_prefs.light_intensity_threshold if user_prefs else 'Not Set' }}</p>
--->
