dashboard looks decent

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,7 +7,7 @@
     <script src="{{ url_for('static', filename='js/justgage-1.2.2/raphael-2.1.4.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/justgage-1.2.2/justgage.js') }}"></script>
     <script src="{{ url_for('static', filename='js/dashboardMQTT.js') }}"></script>
-    <link rel="stylesheet" target=_blank href="{{ url_for('static', filename='css/dashboard-new.css') }}">
+    <link rel="stylesheet" target=_blank href="{{ url_for('static', filename='css/dashboard.css') }}">
 </head>
 <body>
     <header class="dashboard-header">
